[package]
name = "warp-websocket-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.17"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.7"
warp = "0.3"
pretty_env_logger = "0.4.0"
futures-util = "0.3"
